--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "compression": "1.7.4",
     "express": "4.17.1",
+    "framer-motion": "^4.1.17",
     "lodash": "4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
