--- a/package.json
+++ b/package.json
@@ -32,68 +32,68 @@
     "lodash": "4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-router": "5.2.0",
-    "react-router-dom": "5.2.0",
-    "styled-components": "5.3.0"
+    "react-router": "5.2.1",
+    "react-router-dom": "5.3.0",
+    "styled-components": "5.3.1"
   },
   "devDependencies": {
-    "@babel/core": "7.14.0",
-    "@babel/eslint-parser": "^7.13.14",
-    "@babel/plugin-proposal-class-properties": "7.13.0",
-    "@babel/plugin-proposal-export-default-from": "7.12.13",
-    "@babel/plugin-proposal-export-namespace-from": "7.12.13",
+    "@babel/core": "7.15.5",
+    "@babel/eslint-parser": "7.15.4",
+    "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@babel/plugin-proposal-export-default-from": "7.14.5",
+    "@babel/plugin-proposal-export-namespace-from": "7.14.5",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/preset-env": "7.14.1",
-    "@babel/preset-react": "7.13.13",
-    "@babel/preset-typescript": "7.13.0",
+    "@babel/preset-env": "7.15.4",
+    "@babel/preset-react": "7.14.5",
+    "@babel/preset-typescript": "7.15.0",
     "@svgr/webpack": "5.5.0",
-    "@types/compression": "1.7.0",
-    "@types/copy-webpack-plugin": "8.0.0",
-    "@types/html-webpack-plugin": "3.2.5",
-    "@types/react": "17.0.5",
-    "@types/react-dom": "17.0.3",
-    "@types/react-router": "5.1.14",
-    "@types/react-router-dom": "5.1.7",
-    "@types/styled-components": "5.1.9",
+    "@types/compression": "1.7.1",
+    "@types/copy-webpack-plugin": "8.0.1",
+    "@types/html-webpack-plugin": "3.2.6",
+    "@types/react": "17.0.20",
+    "@types/react-dom": "17.0.9",
+    "@types/react-router": "5.1.16",
+    "@types/react-router-dom": "5.1.8",
+    "@types/styled-components": "5.1.14",
     "@types/webpack": "5.28.0",
-    "@types/webpack-dev-server": "3.11.3",
-    "@types/workbox-webpack-plugin": "5.1.6",
-    "@typescript-eslint/eslint-plugin": "4.22.1",
-    "@typescript-eslint/parser": "4.22.1",
+    "@types/webpack-dev-server": "4.1.0",
+    "@types/workbox-webpack-plugin": "5.1.8",
+    "@typescript-eslint/eslint-plugin": "4.30.0",
+    "@typescript-eslint/parser": "4.30.0",
     "babel-loader": "8.2.2",
     "babel-plugin-dynamic-import-node": "2.3.3",
     "babel-plugin-lodash": "3.3.4",
-    "babel-plugin-styled-components": "1.12.0",
-    "copy-webpack-plugin": "8.1.1",
-    "css-loader": "5.2.4",
-    "eslint": "7.25.0",
+    "babel-plugin-styled-components": "1.13.2",
+    "copy-webpack-plugin": "9.0.1",
+    "css-loader": "6.2.0",
+    "eslint": "7.32.0",
     "eslint-config-react-app": "6.0.0",
-    "eslint-plugin-flowtype": "5.7.2",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-flowtype": "5.9.2",
+    "eslint-plugin-import": "2.24.2",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.23.2",
+    "eslint-plugin-react": "7.25.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "file-loader": "6.2.0",
-    "fork-ts-checker-webpack-plugin": "6.2.6",
+    "fork-ts-checker-webpack-plugin": "6.3.3",
     "html-loader": "^2.1.2",
-    "html-webpack-plugin": "^5.3.1",
+    "html-webpack-plugin": "5.3.2",
     "rimraf": "3.0.2",
-    "style-loader": "2.0.0",
+    "style-loader": "3.2.1",
     "stylelint": "13.13.1",
     "stylelint-config-standard": "^22.0.0",
-    "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.10.0",
-    "terser-webpack-plugin": "5.1.1",
-    "ts-node": "9.1.1",
+    "stylelint-config-styled-components": "0.1.1",
+    "stylelint-processor-styled-components": "1.10.0",
+    "terser-webpack-plugin": "5.2.3",
+    "ts-node": "10.2.1",
     "tsconfig-paths-webpack-plugin": "3.5.1",
     "typesafe-actions": "5.1.0",
-    "typescript": "4.2.4",
+    "typescript": "4.4.2",
     "url-loader": "4.1.1",
-    "webpack": "5.36.2",
-    "webpack-bundle-analyzer": "4.4.1",
-    "webpack-cli": "4.7.0",
-    "webpack-dev-server": "3.11.2",
-    "webpack-merge": "5.7.3",
-    "workbox-webpack-plugin": "6.1.5"
+    "webpack": "5.52.0",
+    "webpack-bundle-analyzer": "4.4.2",
+    "webpack-cli": "4.8.0",
+    "webpack-dev-server": "4.1.0",
+    "webpack-merge": "5.8.0",
+    "workbox-webpack-plugin": "6.2.4"
   }
 }
