--- a/.babelrc
+++ b/.babelrc
@@ -5,8 +5,8 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    "lodash",
     "babel-plugin-styled-components",
+    "@babel/plugin-transform-runtime",
     "@babel/plugin-syntax-dynamic-import",
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-export-default-from",
