--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint": "eslint --ext .js --ext .jsx --ext .ts --ext .tsx src/",
     "stylelint": "stylelint './src/**/*.ts*'",
     "analyzer": "webpack --config config/webpack.config.prod.ts --profile --json > stats.json && webpack-bundle-analyzer stats.json ./dist",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "jest --watch"
   },
   "browserslist": [
     "> 0.2%",
@@ -28,9 +29,8 @@
   "dependencies": {
     "compression": "1.7.4",
     "express": "4.17.1",
-    "framer-motion": "^4.1.17",
-    "lodash": "4.17.21",
-    "qs": "^6.7.0",
+    "framer-motion": "4.1.17",
+    "qs": "6.10.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router": "5.2.1",
@@ -44,13 +44,17 @@
     "@babel/plugin-proposal-export-default-from": "7.14.5",
     "@babel/plugin-proposal-export-namespace-from": "7.14.5",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/plugin-transform-runtime": "7.15.0",
     "@babel/preset-env": "7.15.4",
     "@babel/preset-react": "7.14.5",
     "@babel/preset-typescript": "7.15.0",
     "@svgr/webpack": "5.5.0",
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/react": "12.0.0",
     "@types/compression": "1.7.1",
     "@types/copy-webpack-plugin": "8.0.1",
     "@types/html-webpack-plugin": "3.2.6",
+    "@types/jest": "27.0.1",
     "@types/react": "17.0.20",
     "@types/react-dom": "17.0.9",
     "@types/react-router": "5.1.16",
@@ -59,11 +63,12 @@
     "@types/webpack": "5.28.0",
     "@types/webpack-dev-server": "4.1.0",
     "@types/workbox-webpack-plugin": "5.1.8",
-    "@typescript-eslint/eslint-plugin": "4.30.0",
-    "@typescript-eslint/parser": "4.30.0",
+    "@typescript-eslint/eslint-plugin": "4.31.0",
+    "@typescript-eslint/parser": "4.31.0",
+    "babel-jest": "27.1.0",
     "babel-loader": "8.2.2",
     "babel-plugin-dynamic-import-node": "2.3.3",
-    "babel-plugin-lodash": "3.3.4",
+    "babel-plugin-import-remove-resource-query": "1.0.0",
     "babel-plugin-styled-components": "1.13.2",
     "copy-webpack-plugin": "9.0.1",
     "css-loader": "6.2.0",
@@ -74,10 +79,13 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.25.1",
     "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-testing-library": "4.12.1",
     "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "6.3.3",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "5.3.2",
+    "jest": "27.1.0",
+    "jest-transform-stub": "2.0.0",
     "rimraf": "3.0.2",
     "style-loader": "3.2.1",
     "stylelint": "13.13.1",
@@ -85,6 +93,7 @@
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.10.0",
     "terser-webpack-plugin": "5.2.3",
+    "ts-jest": "27.0.5",
     "ts-node": "10.2.1",
     "tsconfig-paths-webpack-plugin": "3.5.1",
     "typesafe-actions": "5.1.0",
